chore: made basic changes to the header

--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <header>
+        <img src="assets/images/logo-full.svg" alt="">
+        <h1>Coding Conf</h1>
+    </header>
+    <section>
+        <h1>Your Journey to Coding Conf 2025 Starts Here!</h1>
+        <p>Secure you sport at next year's biggest coding conference.</p>
+    </section>
     <h1>Conference ticket form</h1>
     <input type="text" id="promptInput" placeholder="Enter your prompt">
     <button id="generateButton">Generate</button>
-    <div id="imageContainer"></div>
+    
 
 
 <script src="script.js"></script>  
