feat: styled the drag and drop and corrected a mistake i made on the div(#dropContainer)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </section>
     <section class="fileuploadcontainer">
         <p>Upload Avatar</p>
-        <div class="uploadfile" id="dropContainer"></div>
+        <div class="uploadfile" id="dropContainer">
             <img src="assets/images/icon-upload.svg" alt="">
             <p>Drag and drop or click to upload</p>
             <input type="file" id="fileUpload" accept="image/*" style="display: none;">
