feat:  made a table from the data gotten from the user from the ticket form.

--- a/table.html
+++ b/table.html
@@ -13,12 +13,14 @@
         <thead>
             <tr>
                 <th>Full Name</th>
-                <th>Email Address</th>
-                <th>Github Username</th>
+                <th>email</th>
+                <th>Email</th>
+                <th>GitHub Username</th>
             </tr>
-            
         </thead>
-        <tbody id="tabledata"></tbody>
+        <tbody id="usersTableBody">
+            <!-- Rows will be inserted dynamically here -->
+        </tbody>
     </table>
 </body>
 </html>
