chore: tested the features once more

--- a/table.html
+++ b/table.html
@@ -12,8 +12,8 @@
     <table>
         <thead>
             <tr>
+                <th>User id</th>
                 <th>Full Name</th>
-                <th>email</th>
                 <th>Email</th>
                 <th>GitHub Username</th>
             </tr>
